RESOLVED FIXED308814
Ignore another warning in generated code
https://bugs.webkit.org/show_bug.cgi?id=308814
Summary Ignore another warning in generated code
adrian_taylor
Reported 2026-02-27 03:10:53 PST
The generated WebKit-Swift-Generated.h file emits "objc-property-no-attribute" warnings. We should ignore them in WebKit until the problem is fixed in the Swift compiler.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-27 03:11:01 PST
adrian_taylor
Comment 2 2026-02-27 03:12:33 PST
EWS
Comment 3 2026-03-01 23:18:56 PST
Committed 308444@main (f9409a9efaa9): <https://commits.webkit.org/308444@main> Reviewed commits have been landed. Closing PR #59568 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.