Ignore another warning in generated code https://bugs.webkit.org/show_bug.cgi?id=308814 rdar://171345937

Reviewed by Richard Robinson.

The Swift compiler emits warning-prone code within the generated
WebKit-Swift-Generated.h header. In the WebKit build, those warnings
are fatal. Make them un-fatal until the problem is fixed in the compiler.

Canonical link: https://commits.webkit.org/308444@main